icons, spacing fixed, just need work experience and projects up

--- a/css/style.css
+++ b/css/style.css
@@ -494,8 +494,8 @@ body.offcanvas .colorlib-nav-toggle {
 .colorlib-blog,
 .colorlib-work,
 .colorlib-contact {
-  padding-top: 3em;
-  padding-bottom: 4.5em;
+  padding-top: 2em;
+  padding-bottom: 0.5em;
   clear: both;
   width: 100%;
   display: block;
@@ -512,6 +512,7 @@ body.offcanvas .colorlib-nav-toggle {
 .colorlib-services {
   padding-top: 0;
   padding-bottom: 4.5em;
+  margin-bottom: 7em;
   clear: both;
   width: 100%;
   display: block;
@@ -526,8 +527,8 @@ body.offcanvas .colorlib-nav-toggle {
   .colorlib-about,
   .colorlib-services,
   .colorlib-contact {
-    padding-top: 5em;
-    padding-bottom: 8em;
+    padding-top: 2em;
+    padding-bottom: 0.5em;
   }
 }
 
@@ -540,7 +541,7 @@ body.offcanvas .colorlib-nav-toggle {
 
 .colorlib-heading {
   font-size: 18px;
-  margin-bottom: 4em;
+  margin-bottom: 1em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 5px;
@@ -1894,77 +1895,78 @@ body.offcanvas .colorlib-nav-toggle {
 .img-circle {
   background-color: white;
   transition: all 300ms;
-  height: 12em;
-  width: 12em;
+  height: 10em;
+  width: 10em;
   border-radius: 50%;
   border: 1px solid transparent;
   box-shadow: 20px 15px 65px -12px lightgray;
 }
 .skill__img-react {
-  padding: 1em;
-  height: 12em;
-  width: 12em;
+  padding: 1.3em 1em 1em 1em;
+  height: 10em;
+  width: 10em;
   object-fit: cover;
 }
 .skill__img-native {
-  margin-top: 0.5em;
-  height: 11em;
-  width: 11em;
+  margin-top: 0.23em;
+  height: 10em;
+  width: 10em;
   object-fit: cover;
   border-radius: 50%;
 }
 .skill__img-redux {
-  padding-top: 1.4em;
-  height: 9.5em;
-  width: 9.5em;
+  padding-top: 1.12em;
+  height: 8em;
+  width: 8em;
   object-fit: contain;
 }
 .skill__img-es6 {
-  height: 12em;
-  width: 12em;
+  margin-top: 0.87em;
+  height: 8.1em;
+  width: 8.1em;
   object-fit: cover;
   border-radius: 50%;
 }
 .skill__img-express {
-  padding-top: 1em;
-  height: 11em;
-  width: 11em;
+  padding-top: 0.75em;
+  height: 9.23em;
+  width: 9.23em;
   object-fit: cover;
 }
 .skill__img-git {
-  padding-top: 1em;
-  height: 11em;
-  width: 11em;
+  padding-top: 0.8em;
+  height: 9em;
+  width: 9em;
   object-fit: contain;
 }
 .skill__img-firebase {
-  padding-top: 1.5em;
-  height: 10.2em;
-  width: 10.2em;
+  padding-top: 1.2em;
+  height: 8.6em;
+  width: 8.6em;
   object-fit: contain;
 }
 .skill__img-html {
-  padding-top: 2.3em;
-  height: 10.2em;
-  width: 10.2em;
+  padding-top: 1.9em;
+  height: 8.5em;
+  width: 8.5em;
   object-fit: contain;
 }
 .skill__img-sql {
-  padding-top: 1.9em;
-  height: 11em;
-  width: 11em;
+  padding-top: 1.7em;
+  height: 9em;
+  width: 9em;
   object-fit: contain;
 }
 .skill__img-node {
   padding-top: 1em;
-  height: 11em;
-  width: 11em;
+  height: 9em;
+  width: 9em;
   object-fit: cover;
 }
 .skill__img-io {
-  padding-top: 1em;
-  height: 11em;
-  width: 11em;
+  padding-top: 0.9em;
+  height: 9em;
+  width: 9em;
   object-fit: contain;
 }
 
